--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,6 @@ test {
 		showStackTraces true
 
 		// Change to `true` for more verbose test output
-		showStandardStreams = true
+		showStandardStreams = false
 	}
 }
